--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -202,7 +202,7 @@ function regCheck(){
   // console.log(date,hr);
   if(date != 22 && hr != 10){
     for(let i = 1;i<5;i++){
-      // console.log("regBtn"+i);
+      console.log("regBtn"+i);
       tg = document.getElementById("regBtn"+i);
       e = tg.parentElement;
       e.innerHTML = "Opens Shortly!";
