--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -199,7 +199,7 @@ function regCheck(){
   d = new Date();
   date = d.getDate();
   hr = d.getHours();
-  // console.log(date,hr);
+  console.log(date,hr);
   if(date != 22 && hr != 10){
     for(let i = 1;i<5;i++){
       console.log("regBtn"+i);
