--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -235,11 +235,11 @@ function Reg(maximum,event){
       alert("Registrations are Completed!");
     }
   }
-setTimeout(function(){
-    if ($('msg').length > 0) {
-      $('#msg').remove();
-    }
-  },5)
+// setTimeout(function(){
+//     if ($('msg').length > 0) {
+//       $('#msg').remove();
+//     }
+//   },5)
 
 // Automatic Slideshow - change image every 10 seconds
 var myIndex = 0;
