--- a/register/templates/register/registerbase.html
+++ b/register/templates/register/registerbase.html
@@ -144,18 +144,18 @@
                 <input type="Number" pattern="[0-9]{13}" min = "1000000000000" max = "9999999999999" placeholder="Roll Number" name = "rollnumber" required = "" class="form-control">
             </div>
             <div class="form-wrapper">
-                <select name="year" id="" class="form-control" required>
-                    <option value="" disabled selected>Year</option>
+                <select  name="year" id="selyear" class="form-control" required>
+                    <option   value="" disabled selected>Year</option>
                     <option value="1"> First Year</option>
                     <option value="2">Second Year</option>
-                    <option value="3" >Third Year</option>
-                    <option value="4" >Fourth Year</option>
+                    <!-- <option value="3" >Third Year</option> -->
+                    <!-- <option value="4" >Fourth Year</option> -->
                 </select>
             </div>
 
             <div class="form-wrapper">
-                <select name="branch" id="" class="form-control" required>
-                    <option value="" disabled selected>Branch</option>
+                <select name="branch" id="selbranch" class="form-control" required>
+                    <option value="" disabled selected>Branch/Course</option>
                     <option value="CSE-AI&ML">CSE-AI&ML</option>
                     <option value="CSE-DS">CSE-DS</option>
                     <option value="CSE-IOT" >CSE-IOT</option>
@@ -163,15 +163,24 @@
                     <option value="IT" >IT</option>
                     <option value="ECE" >ECE</option>
                     <option value="MECHANICAL" >MECHANICAL</option>
+                    <option value="MCA" >MCA</option>
                 </select>
             </div>
             <div class="form-wrapper">
-                <select name="sec" id="" class="form-control" required>
+                <select name="sec" id="sec" class="form-control" required>
                     <option value="" disabled selected>Section</option>
                     <option value="A">A</option>
                     <option value="B">B</option>
                     <option value="C" >C</option>
                     <option value="D" >D</option>
+                    <option value="M1" >M1</option>
+                    <option value="M2" >M2</option>
+                    <option value="M3" >M3</option>
+                    <option value="M4" >M4</option>
+                    <option value="E1" >E1</option>
+                    <option value="E2" >E2</option>
+                    <option value="E3" >E3</option>
+                    <option value="E4" >E4</option>
                 </select>
             </div>
             <div class="form-wrapper">
@@ -204,4 +213,11 @@
     </div>
 
 </body>
+<script>
+    function yearCheck(){
+        var a = document.getElementById('selyear');
+        var b = a.firstElementChild.text;
+        console.log(a,b);
+    }
+</script>
 </html>
