--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -92,7 +92,7 @@ body {font-family: "Lato", sans-serif}
       <div class="w3-third">
         <img src="https://rdecpwa.firebaseapp.com/images/dept/hodcs.jpg" class="w3-round w3-margin-bottom" alt="Random Name" width="123.29" height="123.29">
         <h4>Dr. Jaideep Kumar</h4>
-        <h6 style="margin-bottom: 0%;" >(HOD CSE Department)</h6>
+        <h6 style="margin-bottom: 0%;" >(HOD CSE/IT Department)</h6>
         <h6 style="margin-top: 0%;" >(Dean Student Welfare)</h6>
       </div>
     </div>
