--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -51,6 +51,11 @@ body {font-family: "Lato", sans-serif}
   </header>
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
+    <img src="https://i.ibb.co/SXZs82H/t.jpg" style="width:100%">
+    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+    </div>
+  </div>
+  <div class="mySlides w3-display-container w3-center">
     <img src="{% static 'images/slideshow_advance.jpeg' %}" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>Advance Programming With DS</h3>
