small spelling correction

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -115,7 +115,7 @@ body {font-family: "Lato", sans-serif}
       <div class="w3-col l3 m6 w3-margin-bottom">
           <img src="{% static 'images/Basic 2.jpg' %}" alt="John" style="width:100%">
           <div class="w3-container w3-white">                       <h3>Basic Programming</h3>
-            <p>Basic Programming is for the begineers. Here you can test your basic skill and you'll win something. Isn't great!!</p>
+            <p>Basic Programming is for the beginners. Here you can test your basic skill and you'll win something. Isn't great!!</p>
             <a  href="{% url 'registerbasic' %}"><button id="regBtn1" class="w3-button w3-black w3-margin-bottom" >&#128073;<span id = 'bcount' class="w3-tag w3-red w3-margin-left">TOTAL REGISTERED:{{bcount}} of 100</span></button></a>
           </div>
       </div>
@@ -139,7 +139,7 @@ body {font-family: "Lato", sans-serif}
                 <img src="{% static 'images/project.jpeg' %}" alt="Project" style="width:100%">
           <div class="w3-container w3-white">
         <h3>Project</h3>
-            <p>Real sweat Real skills.. Thing get heated here!! You will get time to prepare and present project. Some intance action.</p>
+            <p>Real sweat Real skills.. Thing get heated here!! You will get time to prepare and present project. Some really intense action.</p>
             <a  href="{% url 'registerproject' %}"><button id="regBtn4" class="w3-button w3-black w3-margin-bottom" >&#128073;<span id = "pcount" class="w3-tag w3-red w3-margin-left">TOTAL REGISTERED:{{pcount}} of 25</span></button></a>
           </div>
         </div>
