small spelling correction

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -131,7 +131,7 @@ body {font-family: "Lato", sans-serif}
       <div class="w3-col l3 m6 w3-margin-bottom">
           <img src="{% static 'images/bgmi 2.jpg' %}" alt="Project" style="width:100%">
           <div class="w3-container w3-white">            <h3>Online Gaming</h3>
-            <p>Even if you are NOOB in programming. Doesn't mean you are NOOB in Online gaming. Winners Register here!!</p>
+            <p>Even if you are NOOB in programming. Doesn't mean you are in Online gaming. Winners Register here!!</p>
             <a  href="{% url 'registergaming' %}"><button id="regBtn3" class="w3-button w3-black w3-margin-bottom" >&#128073;<span id = "gcount" class="w3-tag w3-red w3-margin-left">TOTAL REGISTERED:{{gcount}} of 90</span></button></a>
           </div>
       </div>
